IMOD History
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
10/14/16: Batchruntomo can now exclude images at the end of the series with
large dark regions, do tomogram positioning for plastic sections, combine
dual-axis tomograms, and trim to section limits for plastic sections.

10/14/14: Made dm2mrc write temporary files to output file directory and added
option to set a directory for these files (In 4.7).

10/12/14: IMOD_4-8-16
10/12/14: Fixed uninitialized quiet option in Newstack.

10/10/14: Fixed -O option to 3dmod, broken in 4.8.7.

10/9/14: IMOD_4-8-15
10/9/14: Fixed two-sided display of meshes in models built on flipped
tomograms before IMOD 4.7 (In 4.7).

10/8/14: Made the self-installing package script update python.exe in Cygwin
bin if it exists but no longer matches the python link target, added script
for executable installer to call to make or update python.exe (In 4.7).

10/7/14: Clip histogram with -s option will analyze for bimodal distribution
of values and report fraction with low values.

10/2/14: IMOD_4-8-14
10/2/14: Corrsearch3d can now compute a measure of local structure and use it
to eliminate patches from consideration, which allows it to work without a
boundary model or tight Z limits.  It also takes options that allow it to
eliminate patches outside the area that can be reconstructed well. Refinematch
and Findwarp can try to fit after eliminating patches with a series of
criteria for these local structure values. A new script, Autopatchfind, runs
patchcorr and matchorwarp repeatedly with increasing patch size or density to 
achieve a criterion mean residual.  Setupcombine was adpated to these new
capabilities.

10/2/14: Added new version of Findsection that analyzes surfaces of a plastic
section and can output a model for tomopitch, a model for flattening, and
estimates of Z limits for trimming and combine.

10/2/14: In 3dmod, added Ctrl-X hot key to open XYZ, added K to toggle